fixed border radius on safari

--- a/src/styles/blocks/sidebar.sass
+++ b/src/styles/blocks/sidebar.sass
@@ -18,10 +18,16 @@
       border-bottom: dotted 1px #9055a2
 
 .profPic
+  overflow: hidden
   width: 150px
   height: 150px
   border-radius: 50%
+  -webkit-border-radius: 50%
+  -moz-border-radius: 50%
+  -khtml-border-radius: 50%
   border: 1px solid white
+  vertical-align: middle
+  -webkit-mask-image: -webkit-radial-gradient(white, black)
 
 .sidebar__intro
   color: $name-logo
